<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/tarjetasFragment"
        android:icon="@drawable/ic_card"
        android:title="@string/nav_tarjetas" />
    
    <item
        android:id="@+id/teamsFragment"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_teams" />
    
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
    
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
        
</menu>