<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <!-- Authentication Flow -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Main App Flow -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_create_tarjeta"
            app:destination="@id/createTarjetaFragment" />
    </fragment>

    <fragment
        android:id="@+id/tarjetasFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.TarjetasFragment"
        android:label="@string/nav_tarjetas"
        tools:layout="@layout/fragment_tarjetas">
        <action
            android:id="@+id/action_tarjetas_to_create"
            app:destination="@id/createTarjetaFragment" />
        <action
            android:id="@+id/action_tarjetas_to_detail"
            app:destination="@id/tarjetaDetailFragment">
            <argument
                android:name="tarjetaId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/teamsFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.TeamsFragment"
        android:label="@string/nav_teams"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.NotificationsFragment"
        android:label="@string/nav_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Tarjeta Related -->
    <fragment
        android:id="@+id/createTarjetaFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.CreateTarjetaFragment"
        android:label="@string/new_tarjeta"
        tools:layout="@layout/fragment_create_tarjeta" />

    <fragment
        android:id="@+id/tarjetaDetailFragment"
        android:name="com.cocido.formokaizen.presentation.ui.fragments.TarjetaDetailFragment"
        android:label="Detalle Tarjeta"
        tools:layout="@layout/fragment_tarjeta_detail">
        <argument
            android:name="tarjetaId"
            app:argType="integer" />
    </fragment>

</navigation>